--- a/Employees-Manager/Pages/Employees/Create.cshtml
+++ b/Employees-Manager/Pages/Employees/Create.cshtml
@@ -8,39 +8,40 @@
     <div class="row p-0 m-0">
 
         <div class="col-12 border p-5 mt-3">
-            <form action="/" method="post">
+            <form method="post">
                 <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" class="form-control" name="Name" id="name" />
+                    <label asp-for="Employee.Name">Full Name</label>
+                    <input type="text" asp-for="Employee.Name" class="form-control" id="name" />
                 </div>
                 <div class="form-group">
-                    <label for="name">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" required />
+                    <label asp-for="Employee.Email">Email address</label>
+                    <input type="email"  asp-for="Employee.Email" class="form-control" id="email" required />
                 </div>
                 <div class="form-group">
-                    <label for="name">Date of Birth</label>
-                    <input type="date" class="form-control" name="dob" id="dob" />
+                    <label asp-for="Employee.Dob">Date of Birth</label>
+                    <input type="date" asp-for="Employee.Dob" class="form-control" id="dob" />
                 </div>
-                <div class="form-group">
-                    <label for="vacation">Vacations</label>
+                <div class="form-group" id="vacations_container">
+                    <label asp-for="Employee.Vacations">Vacations</label>
                     <div class="row">
                         <div class="col-4 p-1 text-center">Type</div>
-                        <div class="col-4 p-1 text-center">Balance</div>
+                        <div class="col-3 p-1 text-center">Balance</div>
                         <div class="col-3 p-1 text-center">Used</div>
-                        <div class="col-1 text-center"><a>Add</a></div>
+                        <div class="col-1 text-center"><a class="btn btn-light btn-sm" id="add_vacation_btn">Add</a></div>
+                        <div class='col-1 text-center'><a class='btn btn-danger btn-sm' id='delete_vacation_btn' onclick=removeVacation()>Delete</a></div>
                     </div>
                     <div class="row">
 
-                        <div class="col-4 p-1"><input type="text" class="form-control" name="vacation" value="Casual" readonly/></div>
-                        <div class="col-4 p-1"><input type="number" class="form-control" name="vacation" value="7" min="0"/></div>
-                        <div class="col-3 p-1"><input type="number" class="form-control" name="vacation" value="0" min="0"/></div>
+                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[0].Vacation_Type" type="text" class="form-control" value="Casual" readonly/></div>
+                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[0].Balance" type="number" class="form-control" value="7" min="0"/></div>
+                        <div class="col-3 p-1"><input asp-for="Employee.Vacations[0].Used" type="number" class="form-control" value="0" min="0" /></div>
                         <div class="col-1"></div>
                     </div>
                     <div class="row">
 
-                        <div class="col-4 p-1"><input type="text" class="form-control" name="vacation" value="Schedule" readonly/></div>
-                        <div class="col-4 p-1"><input type="number" class="form-control" name="vacation" value="14" min="0"/></div>
-                        <div class="col-3 p-1"><input type="number" class="form-control" name="vacation" value="0" min="0"/></div>
+                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[1].Vacation_Type" type="text" class="form-control" value="Schedule" readonly/></div>
+                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[1].Balance" type="number" class="form-control" value="14" min="0"/></div>
+                        <div class="col-3 p-1"><input asp-for="Employee.Vacations[1].Used" type="number" class="form-control" value="0" min="0"/></div>
                         <div class="col-1"></div>
                     </div>
 
