-Add vacations details in employees view

--- a/Employees-Manager/Pages/Employees/Create.cshtml
+++ b/Employees-Manager/Pages/Employees/Create.cshtml
@@ -27,7 +27,7 @@
                         <div class="col-4 p-1 text-center">Type</div>
                         <div class="col-3 p-1 text-center">Balance</div>
                         <div class="col-3 p-1 text-center">Used</div>
-                        <div class="col-1 text-center"><a class="btn btn-light btn-sm" id="add_vacation_btn">Add</a></div>
+                        <div class="col-1 text-center"><a class="btn btn-primary btn-sm" id="add_vacation_btn">Add</a></div>
                         <div class='col-1 text-center'><a class='btn btn-danger btn-sm' id='delete_vacation_btn' onclick=removeVacation()>Delete</a></div>
                     </div>
                     <div class="row">
@@ -48,7 +48,7 @@
 
 
                 </div>
-                <button type="submit" class="btn btn-primary">Create</button>
+                <button type="submit" class="btn btn-light">Create User</button>
             </form>
         </div>
     </div>
