--- a/Employees-Manager/Pages/Index.cshtml
+++ b/Employees-Manager/Pages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome hiiii</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome</h1>
+    <p>This project is built using ASP.NET Core for learning purposes</a></p>
+    <p>This is an employees manager web app that helps managers track their employees' vacations.</a></p>
+
 </div>
