Fix a bug with create employee where the id was always -1 Add edit functionality Update migration

--- a/Employees-Manager/Pages/Employees/Index.cshtml
+++ b/Employees-Manager/Pages/Employees/Index.cshtml
@@ -56,7 +56,7 @@
                         </td>
                         <td>
                             <button class="btn btn-danger btn-sm">Delete</button>
-                            <a class="btn btn-secondary btn-sm text-white">Edit</a>
+                            <a asp-page="Edit" asp-route-id="@employee.Id"class="btn btn-secondary btn-sm text-white">Edit</a>
                         </td>
                     </tr>
 
