--- a/Employees-Manager/Pages/Employees/Edit.cshtml
+++ b/Employees-Manager/Pages/Employees/Edit.cshtml
@@ -1,16 +1,18 @@
 ﻿@page
-@model Employees_Manager.Pages.Employees.CreateModel
+@model Employees_Manager.Pages.Employees.EditModel
 @{
-    ViewData["Title"] = "Create Employee";
+    ViewData["Title"] = "Edit Employee";
 }
 
 <div class="container">
     <div class="row p-0 m-0">
         <div class="col-2"></div>
         <div class="col-8 border p-5 mt-3">
-            <h3 class="p-2 text-center">Create a New Employee</h3><hr />
+            <h3 class="p-2 text-center">Edit Employee</h3><hr />
             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             <form method="post">
+                <input type="hidden" asp-for="Employee.Id" />
+
                 <div class="form-group">
                     <label asp-for="Employee.Name">Full Name</label>
                     <input type="text" asp-for="Employee.Name" class="form-control" id="name" />
@@ -40,27 +42,22 @@
                         <div class="col-1 text-center"><a class="btn btn-primary btn-sm" id="add_vacation_btn">Add</a></div>
                         <div class='col-1 text-center'><a class='btn btn-danger btn-sm' id='delete_vacation_btn' onclick=removeVacation()>Delete</a></div>
                     </div>
-                    <div class="row">
-
-                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[0].Vacation_Type" type="text" class="form-control" value="Casual" readonly /></div>
-                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[0].Balance" type="number" class="form-control" value="7" min="0" /></div>
-                        <div class="col-3 p-1"><input asp-for="Employee.Vacations[0].Used" type="number" class="form-control" value="0" min="0" /></div>
-                        <div class="col-1"></div>
-                    </div>
-                    <div class="row">
-
-                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[1].Vacation_Type" type="text" class="form-control" value="Schedule" readonly /></div>
-                        <div class="col-4 p-1"><input asp-for="Employee.Vacations[1].Balance" type="number" class="form-control" value="14" min="0" /></div>
-                        <div class="col-3 p-1"><input asp-for="Employee.Vacations[1].Used" type="number" class="form-control" value="0" min="0" /></div>
-                        <div class="col-1"></div>
-                    </div>
 
 
+                    @for (int i = 0; i < Model.Employee.Vacations.Count; i++)
+                    {
+                        <div class="row">
+                            <div class="col-4 p-1"><input asp-for="Employee.Vacations[i].Vacation_Type" type="text" class="form-control" value="@Model.Employee.Vacations[i].Vacation_Type" readonly /></div>
+                            <div class="col-4 p-1"><input asp-for="Employee.Vacations[i].Balance" type="number" class="form-control" value="@Model.Employee.Vacations[i].Balance" min="0" /></div>
+                            <div class="col-3 p-1"><input asp-for="Employee.Vacations[i].Used" type="number" class="form-control" value="@Model.Employee.Vacations[i].Used" min="0" /></div>
+                            <div class="col-1"></div>
+                        </div>
+                    }
 
                 </div>
-                <button type="submit" class="btn btn-light">Create User</button>
+                <button type="submit" class="btn btn-light">Edit User</button>
             </form>
         </div>
     </div>
-    </div>
+</div>
 
