--- a/Employees-Manager/wwwroot/css/site.css
+++ b/Employees-Manager/wwwroot/css/site.css
@@ -54,13 +54,16 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    /*background: rgb(242,242,242);
+    background: linear-gradient(117deg, rgba(242,242,242,1) 0%, rgba(255,255,255,1) 48%, rgba(242,242,242,1) 100%);*/
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+
 }
 .footer {
   position: absolute;
