--- a/Employees-Manager/Pages/Shared/_Layout.cshtml
+++ b/Employees-Manager/Pages/Shared/_Layout.cshtml
@@ -35,8 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Employees_Manager - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+            &copy; 2020 - Employees_Manager</div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
