--- a/Employees-Manager/Pages/Employees/Index.cshtml
+++ b/Employees-Manager/Pages/Employees/Index.cshtml
@@ -2,14 +2,13 @@
 @model Employees_Manager.Pages.Employees.IndexModel
 @{
     ViewData["Title"] = "Employees";
+    ViewData["Title"] = "Employees";
 }
 
 <div class="container">
     <div class="row p-0 m-0">
         <div class="col-9"><h2>Employees</h2></div>
         <div class="col-3"><a asp-page="Create" class="btn btn-info form-control text-white">Add New Employee</a></div>
-
-
 
         <div class="col-12 border p-3 mt-3">
             @if (Model.Employees.Count() > 0)
@@ -42,7 +41,7 @@
                             <td>
 
                                 <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Vacations
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -58,9 +57,10 @@
                                     <button class="btn btn-danger btn-sm" type="submit">Delete</button>
                                 </form>
                                 <a asp-page="Edit" asp-route-id="@employee.Id" class="btn btn-secondary btn-sm text-white">Edit</a>
+                                <a data-toggle="modal" data-target="#request_vacation_modal" class="btn btn-dark btn-sm text-white" onclick="fetchEmployee(@employee.Id)">Request Vacation</a>
+
                             </td>
                         </tr>
-
                     }
 
                 </table>
@@ -69,6 +69,40 @@
             {
                 <h6>No Employees </h6>
             }
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="request_vacation_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="requestTitle"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form method="post" asp-page-handler="Request">
+
+                <div class="modal-body">
+                    <input type="hidden" asp-for="Request.Employee.Id" class="form-control" id="request_employee_id" />
+
+                    <div class="form-group">
+                        <label asp-for= "Request.Value">Value</label>
+                        <input type="number" asp-for="Request.Value" class="form-control" id="request_value" min="0" value="0"/>
+                        <span asp-validation-for="Request.Value" class="text-danger"></span>
+                    </div>
+
+                    <select asp-for="Request.Vacation_Type" class="browser-default custom-select" id="vacation_type_select">
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Request</button>
+                </div>
+            </form>
+
         </div>
     </div>
 </div>
